--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href=".TRABAJO.HTML">
-    <title>Pagina web</title>
+    <title>Quien soy</title>
 </head>
 <body>
 <div class="Blog">
@@ -196,13 +196,13 @@ button {
     color: rgb(70, 67, 67);
 }
 
-.proyecto { 
-    background-color: white; 
-    border-radius: 10px; 
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
-    text-align: center; 
-    padding: 10px; 
-} 
+.proyecto {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
+
 
 .proyecto:hover{
     transform: scale(1.05);
